# Embedded_Network_Monitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  instructions.md  lv_conf.h  lv_drv_conf.h
cmake/: arm-rockchip.cmake
config/: netmon.conf
deploy/: S99netmon  deploy.sh  disable_demo.sh
docs/: admin_manual.md  developer_manual.md  user_manual.md
satellite/: README.md
satellite/firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
satellite/firmware/main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c  sat_data.c  sat_data.h  sat_gauges.c  sat_gauges.h  sat_hal.h  sat_receiver.c  sat_receiver.h  sat_ui.c  sat_ui.h
satellite/firmware/main/boards/: board_ws_1_28.c  board_ws_1_46.c  board_ws_1_85.c
satellite/host/: CMakeLists.txt
satellite/host/src/: sat_encoder.c  sat_encoder.h  sat_feeder.c  sat_serial.c  sat_serial.h  sat_test_sender.c
satellite/protocol/: sat_protocol.h
src/: main.c
src/api/: api_beacon.c  api_beacon.h  api_json.c  api_json.h  api_routes.c  api_routes.h  api_server.c  api_server.h
src/conf/: app_conf.h
src/core/: alerts.c  alerts.h  config.c  config.h  data_store.c  data_store.h  log.c  log.h  ring_buffer.c  ring_buffer.h  utils.c  utils.h
src/hal/: hal_display.c  hal_display.h  hal_touch.c  hal_touch.h
src/net/: net_arp.c  net_arp.h  net_collector.c  net_collector.h  net_connections.c  net_connections.h  net_discovery.c  net_discovery.h  net_dns.c  net_dns.h  net_infra.c  net_infra.h  net_interfaces.c  net_interfaces.h  net_ping.c  net_ping.h  net_wifi.c  net_wifi.h  net_wifi_mgr.c  net_wifi_mgr.h
src/ui/: ui_alerts.c  ui_alerts.h  ui_connections.c  ui_connections.h  ui_dashboard.c  ui_dashboard.h  ui_edit_widgets.c  ui_edit_widgets.h  ui_interface.c  ui_interface.h  ui_layout.c  ui_layout.h  ui_manager.c  ui_manager.h  ui_settings.c  ui_settings.h  ui_status.c  ui_status.h  ui_theme.c  ui_theme.h  ui_traffic.c  ui_traffic.h  ui_widgets.c  ui_widgets.h
